--- a/i18n/de/docusaurus-theme-classic/footer.json
+++ b/i18n/de/docusaurus-theme-classic/footer.json
@@ -1,18 +1,18 @@
 {
   "link.title.Other documentation": {
-    "message": "Other documentation",
+    "message": "Andere Dokumentation",
     "description": "The title of the footer links column with title=Other documentation in the footer"
   },
   "link.title.More": {
-    "message": "More",
+    "message": "Mehr",
     "description": "The title of the footer links column with title=More in the footer"
   },
   "link.item.label.ExFlow for FO": {
-    "message": "ExFlow for FO",
+    "message": "ExFlow für FO",
     "description": "The label of footer link with label=ExFlow for FO linking to /docs/intro"
   },
   "link.item.label.ExFlow for BC": {
-    "message": "ExFlow for BC",
+    "message": "ExFlow für BC",
     "description": "The label of footer link with label=ExFlow for BC linking to /docs/user-manual/welcome-to-exflow/introduction"
   },
   "link.item.label.ExFlow Web": {
@@ -20,11 +20,11 @@
     "description": "The label of footer link with label=ExFlow Web linking to /docs/intro"
   },
   "link.item.label.ExFlow support": {
-    "message": "ExFlow support",
+    "message": "ExFlow-Support",
     "description": "The label of footer link with label=ExFlow support linking to /docs/intro"
   },
   "link.item.label.Partner portal": {
-    "message": "Partner portal",
+    "message": "Partnerportal",
     "description": "The label of footer link with label=Partner portal linking to /docs/intro"
   },
   "copyright": {
