Fixed product name

--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -28,7 +28,7 @@
     "description": "The label for category Localizations and ISV Extensions in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Travel and Expense": {
-    "message": "Travel and Expense",
+    "message": "ExFlow Travel & Expense",
     "description": "The label for category Localizations and ISV Extensions in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Business Intelligence and reporting": {
