Translations, links, UI-fixes

--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -1,18 +1,18 @@
 {
   "link.title.Other documentation": {
-    "message": "Andere Dokumentation",
+    "message": "Other documentation",
     "description": "The title of the footer links column with title=Other documentation in the footer"
   },
   "link.title.More": {
-    "message": "Mehr",
+    "message": "More",
     "description": "The title of the footer links column with title=More in the footer"
   },
   "link.item.label.ExFlow for FO": {
-    "message": "ExFlow für FO",
+    "message": "ExFlow for FO",
     "description": "The label of footer link with label=ExFlow for FO linking to https://docs.exflow.cloud/finance-operations"
   },
   "link.item.label.ExFlow for BC": {
-    "message": "ExFlow für BC",
+    "message": "ExFlow for BC",
     "description": "The label of footer link with label=ExFlow for BC linking to docs/user-manual"
   },
   "link.item.label.ExFlow Web": {
@@ -20,27 +20,23 @@
     "description": "The label of footer link with label=ExFlow Web linking to https://docs.exflow.cloud/web"
   },
   "link.item.label.ExFlow support": {
-    "message": "ExFlow-Support",
+    "message": "ExFlow support",
     "description": "The label of footer link with label=ExFlow support linking to https://support.signupsoftware.com/"
   },
   "link.item.label.Partner portal": {
-    "message": "Partnerportal",
+    "message": "Partner portal",
     "description": "The label of footer link with label=Partner portal linking to https://azuresignup.sharepoint.com/sites/Signupsoftware"
-  },
-  "copyright": {
-    "message": "Copyright © 2024 SignUp Software AB",
-    "description": "The footer copyright"
   },
   "link.item.label.Terms and Conditions": {
     "message": "Terms and Conditions",
     "description": "The label of footer link with label=Terms and Conditions linking to /docs/papers/agreements"
   },
-  "link.item.label.Potato": {
-    "message": ".",
-    "description": "The label of footer link with label=Potato linking to /docs/papers/TaE/index"
-  },
   "link.item.label..": {
     "message": ".",
     "description": "The label of footer link with label=. linking to /docs/agreements"
+  },
+  "copyright": {
+    "message": "Copyright © 2024 SignUp Software AB",
+    "description": "The footer copyright"
   }
 }
