--- a/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -1,46 +1,46 @@
 {
   "version.label": {
-    "message": "Nächste",
+    "message": "Next",
     "description": "The label for version current"
   },
   "sidebar.tutorialSidebar.category.Welcome to ExFlow": {
-    "message": "Willkommen bei ExFlow",
+    "message": "Welcome to ExFlow",
     "description": "The label for category Welcome to ExFlow in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Business Functionality": {
-    "message": "Geschäftsfunktionalität",
+    "message": "Business Functionality",
     "description": "The label for category Business Functionality in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Approval Workflow": {
-    "message": "Genehmigungsworkflow",
+    "message": "Approval Workflow",
     "description": "The label for category Approval Workflow in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.Localizations and ISV Extensions": {
-    "message": "Lokalisierungen und ISV-Erweiterungen",
-    "description": "The label for category Localizations and ISV Extensions in sidebar tutorialSidebar"
-  },
-  "sidebar.tutorialSidebar.category.Business Intelligence and reporting": {
-    "message": "Geschäftsanalytik und Berichterstattung",
-    "description": "The label for category Business Intelligence and reporting in sidebar tutorialSidebar"
-  },
-  "sidebar.tutorialSidebar.category.Help and Support": {
-    "message": "Hilfe und Unterstützung",
-    "description": "The label for category Help and Support in sidebar tutorialSidebar"
-  },
-  "sidebar.tutorialSidebar.category.Technical": {
-    "message": "Technisch",
-    "description": "The label for category Technical in sidebar tutorialSidebar"
-  },
   "sidebar.tutorialSidebar.category.ExFlow Sales Order": {
-    "message": "ExFlow Verkaufsauftrag",
+    "message": "ExFlow Sales Order",
     "description": "The label for category ExFlow Sales Order in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.ExFlow CO₂ Insights": {
+    "message": "ExFlow CO₂ Insights",
+    "description": "The label for category ExFlow CO₂ Insights in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.ExFlow Travel & Expense": {
     "message": "ExFlow Travel & Expense",
     "description": "The label for category ExFlow Travel & Expense in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.ExFlow CO₂ Insights": {
-    "message": "ExFlow CO₂-Einblicke",
-    "description": "The label for category ExFlow CO₂ Insights in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.Localizations and ISV Extensions": {
+    "message": "Localizations and ISV Extensions",
+    "description": "The label for category Localizations and ISV Extensions in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Business Intelligence and reporting": {
+    "message": "Business Intelligence and reporting",
+    "description": "The label for category Business Intelligence and reporting in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Help and Support": {
+    "message": "Help and Support",
+    "description": "The label for category Help and Support in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Technical": {
+    "message": "Technical",
+    "description": "The label for category Technical in sidebar tutorialSidebar"
   }
 }
