--- a/i18n/es/docusaurus-theme-classic/footer.json
+++ b/i18n/es/docusaurus-theme-classic/footer.json
@@ -1,39 +1,39 @@
 {
   "link.title.Other documentation": {
     "message": "Otra documentación",
-    "description": "El título de la columna de enlaces del pie de página con el título=Otra documentación en el pie de página"
+    "description": "The title of the footer links column with title=Other documentation in the footer"
   },
   "link.title.More": {
     "message": "Más",
-    "description": "El título de la columna de enlaces del pie de página con el título=Más en el pie de página"
+    "description": "The title of the footer links column with title=More in the footer"
   },
   "link.item.label.ExFlow for FO": {
     "message": "ExFlow para FO",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=ExFlow para FO que enlaza a https://docs.exflow.cloud/finance-operations"
+    "description": "The label of footer link with label=ExFlow for FO linking to https://docs.exflow.cloud/finance-operations"
   },
   "link.item.label.ExFlow for BC": {
     "message": "ExFlow para BC",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=ExFlow para BC que enlaza a docs/user-manual"
+    "description": "The label of footer link with label=ExFlow for BC linking to docs/user-manual"
   },
   "link.item.label.ExFlow Web": {
     "message": "ExFlow Web",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=ExFlow Web que enlaza a https://docs.exflow.cloud/web"
+    "description": "The label of footer link with label=ExFlow Web linking to https://docs.exflow.cloud/web"
   },
   "link.item.label.ExFlow support": {
     "message": "Soporte de ExFlow",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=Soporte de ExFlow que enlaza a https://support.signupsoftware.com/"
+    "description": "The label of footer link with label=ExFlow support linking to https://support.signupsoftware.com/"
   },
   "link.item.label.Partner portal": {
     "message": "Portal de socios",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=Portal de socios que enlaza a https://azuresignup.sharepoint.com/sites/Signupsoftware"
+    "description": "The label of footer link with label=Partner portal linking to https://azuresignup.sharepoint.com/sites/Signupsoftware"
   },
   "copyright": {
     "message": "Copyright © 2024 SignUp Software AB",
-    "description": "El copyright del pie de página"
+    "description": "The footer copyright"
   },
   "link.item.label.Terms and Conditions": {
     "message": "Términos y Condiciones",
-    "description": "La etiqueta del enlace del pie de página con la etiqueta=Términos y Condiciones que enlaza a /docs/papers/agreements"
+    "description": "The label of footer link with label=Terms and Conditions linking to /docs/proxy/proxy-terms-and-conditions"
   },
   "link.item.label.Potato": {
     "message": ".",
