Restored the old manual PDF:s + links

--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -1,6 +1,6 @@
 {
-  "EXFLOW AP": {
-    "message": "EXFLOW AP"
+  "URL-exflow-data-capture": {
+    "message": "https://thankful-water-06a6c0b03.5.azurestaticapps.net/es/user-manual/SO/technical-requirements-sales"
   },
   "EXFLOW DATA CAPTURE": {
     "message": "EXFLOW DATA CAPTURE"
