--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -358,5 +358,44 @@
   "theme.tags.tagsPageTitle": {
     "message": "Tags",
     "description": "The title of the tag list page"
+  },
+  "'/business-central/docs/user-manual/ZZZZZZZ'": {
+    "message": "'/business-central/docs/user-manual/ZZZZZZZ'"
+  },
+  "URL-exflow-data-capture": {
+    "message": "URL-exflow-data-capture"
+  },
+  "EXFLOW CONTENT GATE": {
+    "message": "EXFLOW CONTENT GATE"
+  },
+  "Nada": {
+    "message": "Nada"
+  },
+  "theme.blog.author.noPosts": {
+    "message": "This author has not written any posts yet.",
+    "description": "The text for authors with 0 blog post"
+  },
+  "/business-central/docs/user-manual/myfolder": {
+    "message": "/business-central/docs/user-manual/myfolder"
+  },
+  "URL-EXFLOW-AP": {
+    "message": "/business-central/docs/user-manual/",
+    "description": "desription of link"
+  },
+  "PROXY-LINK-EXFLOW-SALES-ORDER": {
+    "message": "https://docs.exflow.cloud/so",
+    "description": "ExFlow Sales Order link"
+  },
+  "PROXY-LINK-EXFLOW-TRAVEL-EXPENSE": {
+    "message": "https://docs.exflow.cloud/tem",
+    "description": "ExFlow Travel & Expense link"
+  },
+  "PROXY-LINK-EXFLOW-CO2": {
+    "message": "https://docs.exflow.cloud/co2",
+    "description": "desription of link"
+  },
+  "PROXY-LINK-EXFLOW-CONTENT-GATE": {
+    "message": "https://docs.exflow.cloud/cg",
+    "description": "ExFlow Content Gate link"
   }
 }
