--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -29,7 +29,7 @@
   },
   "link.item.label.Terms and Conditions": {
     "message": "Terms and Conditions",
-    "description": "The label of footer link with label=Terms and Conditions linking to /docs/papers/agreements"
+    "description": "The label of footer link with label=Terms and Conditions linking to /docs/proxy/proxy-terms-and-conditions"
   },
   "link.item.label..": {
     "message": ".",
