--- a/i18n/es/code.json
+++ b/i18n/es/code.json
@@ -368,5 +368,28 @@
   "theme.tags.tagsPageTitle": {
     "message": "Etiquetas",
     "description": "The title of the tag list page"
+  },
+  "EXFLOW AP": {
+    "message": "EXFLOW AP"
+  },
+  "URL-EXFLOW-AP": {
+    "message": "/business-central/es/docs/user-manual",
+    "description": "desription of link"
+  },
+  "PROXY-LINK-EXFLOW-SALES-ORDER": {
+    "message": "https://docs.exflow.cloud/so/es",
+    "description": "ExFlow Sales Order link"
+  },
+  "PROXY-LINK-EXFLOW-TRAVEL-EXPENSE": {
+    "message": "https://docs.exflow.cloud/tem/es",
+    "description": "ExFlow Travel & Expense link"
+  },
+  "PROXY-LINK-EXFLOW-CO2": {
+    "message": "https://docs.exflow.cloud/co2/es",
+    "description": "desription of link"
+  },
+  "PROXY-LINK-EXFLOW-CONTENT-GATE": {
+    "message": "https://docs.exflow.cloud/cg/es",
+    "description": "ExFlow Content Gate link"
   }
 }
