--- a/i18n/de/code.json
+++ b/i18n/de/code.json
@@ -398,19 +398,19 @@
     "description": "desription of link"
   },
   "PROXY-LINK-EXFLOW-SALES-ORDER": {
-    "message": "https://docs.exflow.cloud/so/de",
+    "message": "https://docs.signupsoftware.com/so/de",
     "description": "ExFlow Sales Order link"
   },
   "PROXY-LINK-EXFLOW-TRAVEL-EXPENSE": {
-    "message": "https://docs.exflow.cloud/tem/de",
+    "message": "https://docs.signupsoftware.com/tem/de",
     "description": "ExFlow Travel & Expense link"
   },
   "PROXY-LINK-EXFLOW-CO2": {
-    "message": "https://docs.exflow.cloud/co2/de",
+    "message": "https://docs.signupsoftware.com/co2/de",
     "description": "desription of link"
   },
   "PROXY-LINK-EXFLOW-CONTENT-GATE": {
-    "message": "https://docs.exflow.cloud/cg/de",
+    "message": "https://docs.signupsoftware.com/cg/de",
     "description": "ExFlow Content Gate link"
   }
 }
