--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -397,5 +397,10 @@
   "PROXY-LINK-EXFLOW-CONTENT-GATE": {
     "message": "https://docs.signupsoftware.com/cg",
     "description": "ExFlow Content Gate link"
+  },
+  "PROXY-LINK-DATA-CAPTURE": {
+    "message": "https://docs.signupsoftware.com/edc",
+    "description": "Data Capture link"
   }
+
 }
